CICO-34245 fixing footer flickering

--- a/guestweb/common_css/layout.less
+++ b/guestweb/common_css/layout.less
@@ -430,6 +430,7 @@
     min-height:85%;
 }
 #zest-footer{
+    display:none;
     bottom:0;
     width: 100%;
     a{
